fix button too small

--- a/swipegallery/global.css
+++ b/swipegallery/global.css
@@ -160,3 +160,4 @@ select {font-size:4vh}
   position:absolute; color:yellow; width:1em; padding-left:46vw; padding-top:15vh}
 
 .dictgroup {background:#ffb85b}
+button {font-size:2.8vh}
